# MUSE_2.0

./: .all-contributorsrc  .codespell_ignore.txt  .editorconfig  .gitignore  .lycheeignore  .markdownlint.yaml  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  book.toml  build-docs.just  build.rs  doc-requirements.txt  gen_package_yaml.py  justfile  requirements.txt
.cargo/: config.toml
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cargo-build-and-test.yml  cargo-check-docs.yml  cargo-test.yml  check-docs.yml  check-links.yml  ci-example.yml  ci-muse2.yml  ci.yaml  ci.yml  crates-io.yml  deploy-docs.yml  docs.yml  pre-commit.yml  release.yml  update-rust-toolchain.yml
assets/: settings.toml
assets/readme/: README.md  readme_linux.txt  readme_macos_arm.txt  readme_windows.txt
docs/: .gitignore  SUMMARY.md  chapter_1.md  check_examples_hook.py  command_line_help.md  developer_guide.md  dispatch_optimisation.md  file_formats.md  format_docs.py  generate_example_docs.py  generate_input_files_doc.py  generate_input_format_doc.py  glossary.md  input_format.md  input_format.md.jinja  introduction.md  model_description.md  model_diagrams.md  user_guide.md  validate_input_files.py  validate_toml_with_schema.py  validation_checks.md
docs/file_format_docs/: input_format.md.jinja  sections.md.jinja
docs/file_formats/: .gitignore  file_formats.md  generate_docs.py  generate_input_files_doc.py
docs/format_docs/: __init__.py  csv.py  input_format.md.jinja  toml.py
docs/model/: dispatch_optimisation.md  investment.md  model_description.md  model_diagrams.md
docs/notebooks/: capacity.ipynb  example.ipynb  prices.ipynb
docs/templates/: examples.md.jinja  input_files.md.jinja  input_format.md.jinja
example/: settings.toml
example_code/: Cargo.toml  README.md  example
example_code/src/: example_code.rs  main.rs
examples/missing_commodity/: README.txt  agent_commodity_portions.csv  agent_cost_limits.csv  agent_search_space.csv  agents.csv  assets.csv  model.toml  process_flows.csv  process_parameters.csv  processes.csv  regions.csv
examples/muse1_default/: README.txt  agent_objectives.csv  agents.csv  assets.csv  commodities.csv  commodity_levies.csv  process_availabilities.csv  process_flows.csv  process_parameters.csv  processes.csv
examples/placeholder/: constraints.csv  variables.csv
examples/simple/: README.txt  agent_commodities.csv  agent_commodity_portions.csv  agent_cost_limits.csv  agent_objectives.csv  agent_parameters.csv  agent_regions.csv  agent_search_space.csv  agents.csv  assets.csv  commodities.csv  commodity_constraints.csv  commodity_costs.csv  commodity_levies.csv  demand.csv  demand_slicing.csv  model.toml  process_availabilities.csv  process_flow_share_constraints.csv  process_flows.csv  process_investment_constraints.csv  process_pacs.csv  process_parameters.csv  process_regions.csv  processes.csv  regions.csv  settings.toml  time_slices.csv
examples/simple_mc/: agent_commodity_portions.csv  agent_cost_limits.csv  agent_objectives.csv  agents.csv  commodities.csv  demand.csv  demand_slicing.csv  process_availabilities.csv  process_flows.csv  process_parameters.csv  processes.csv  time_slices.csv
examples/two_processes/: agent_commodity_portions.csv  agent_cost_limits.csv  agent_objectives.csv  commodity_levies.csv  demand.csv  demand_slicing.csv  model.toml  (+5 more)
schemas/: settings.yaml  validate.py  validate_toml_with_schema.py
src/: agent.rs  asset.rs  assets.csv  cli.rs  commands.rs  commodity.rs  configuration.rs  csv.rs  demand.rs  dispatch.rs  dispatch_optimisation.rs  finance.rs  fixture.rs  graph.rs  id.rs  input.rs  lib.rs  log.rs  main.rs  map.rs  metrics.rs  model.rs  muse2.rs  output.rs  process.rs  process_readers.rs  region.rs  regions.rs  settings.rs  simulation.rs  test_utils.rs  time_slice.rs  time_slices.rs  units.rs  utils.rs  year.rs
tests/: example_run.rs  model.rs  regenerate_all_data.sh  regression.rs  regression_missing_commodity.rs  regression_muse1_default.rs  regression_simple.rs  regression_simple_mc.rs  regression_two_regions.rs  run.rs  validate.rs
(+153 files in other folders)
