[package]
name = "muse2"
version = "2.0.0-dev1"
authors = ["Hawkes Research Group @ Chemical Engineering, Imperial College London <a.hawkes@imperial.ac.uk>", "Imperial College London RSE Team <ict-rse-team@imperial.ac.uk>"]
edition = "2021"
description = "A tool for running simulations of energy systems"
documentation = "https://energysystemsmodellinglab.github.io/MUSE_2.0"
readme = "README.md"
repository = "https://github.com/EnergySystemsModellingLab/MUSE_2.0"
license = "GPL-3.0-only"
keywords = ["energy", "modelling"]
categories = ["science", "simulation", "command-line-utilities"]

[dependencies]
anyhow = "1.0.95"
csv = "1.3.0"
log = "0.4.22"
float-cmp = "0.10.0"
itertools = "0.14.0"
serde = {version = "1.0.217", features = ["derive", "rc"]}
serde_string_enum = "0.2.1"
tempfile = "3.15.0"
toml = "0.8.13"
unicase = "2.8.1"
fern = {version = "0.7.1", features = ["chrono", "colored"]}
atty = "0.2"
chrono = "0.4"
clap = {version = "4.5.23", features = ["cargo", "derive"]}
include_dir = "0.7.4"
