[package]
name = "muse2"
version = "2.0.0-dev1"
authors = ["Hawkes Research Group @ Chemical Engineering, Imperial College London <a.hawkes@imperial.ac.uk>", "Imperial College London RSE Team <ict-rse-team@imperial.ac.uk>"]
edition = "2021"
description = "A tool for running simulations of energy systems"
documentation = "https://energysystemsmodellinglab.github.io/MUSE_2.0"
readme = "README.md"
repository = "https://github.com/EnergySystemsModellingLab/MUSE_2.0"
license = "GPL-3.0-only"
keywords = ["energy", "modelling"]
categories = ["science", "simulation", "command-line-utilities"]

[dependencies]
anyhow = "1.0.98"
csv = "1.3.0"
log = "0.4.27"
float-cmp = "0.10.0"
itertools = "0.14.0"
serde = {version = "1.0.219", features = ["derive", "rc"]}
serde_string_enum = "0.2.1"
tempfile = "3.19.1"
toml = "0.8.22"
unicase = "2.8.1"
fern = {version = "0.7.1", features = ["chrono", "colored"]}
chrono = "0.4"
clap = {version = "4.5.38", features = ["cargo", "derive"]}
include_dir = "0.7.4"
highs = "1.8.0"
indexmap = "2.9.0"
human-panic = "2.0.2"

[dev-dependencies]
regex = "1.11.1"
rstest = {version = "0.25.0", default-features = false, features = ["crate-name"]}
