[package]
name = "muse2"
version = "2.0.0-dev1"
authors = ["Hawkes Research Group @ Chemical Engineering, Imperial College London <a.hawkes@imperial.ac.uk>", "Imperial College London RSE Team <ict-rse-team@imperial.ac.uk>"]
edition = "2024"
description = "A tool for running simulations of energy systems"
documentation = "https://energysystemsmodellinglab.github.io/MUSE_2.0"
readme = "README.md"
repository = "https://github.com/EnergySystemsModellingLab/MUSE_2.0"
license = "GPL-3.0-only"
keywords = ["energy", "modelling"]
categories = ["science", "simulation", "command-line-utilities"]

[dependencies]
anyhow = "1.0.100"
csv = "1.3.0"
log = "0.4.28"
float-cmp = "0.10.0"
itertools = "0.14.0"
serde = {version = "1.0.223", features = ["derive", "rc"]}
serde_string_enum = "0.2.1"
tempfile = "3.22.0"
toml = "0.9.7"
unicase = "2.8.1"
fern = {version = "0.7.1", features = ["chrono", "colored"]}
chrono = "0.4"
clap = {version = "4.5.48", features = ["cargo", "derive"]}
include_dir = "0.7.4"
highs = "1.12.0"
indexmap = "2.11.0"
human-panic = "2.0.3"
clap-markdown = "0.1.5"
platform-info = "2.0.5"
derive_more = {version = "2.0", features = ["add", "display"]}
petgraph = "0.8.2"
strum = {version = "0.27.2", features = ["derive"]}
documented = "0.9.2"
dirs = "6.0.0"

[dev-dependencies]
current_dir = "0.1.2"
map-macro = "0.3.0"
rstest = {version = "0.26.1", default-features = false, features = ["crate-name"]}

[build-dependencies]
built = {version = "0.8.0", features = ["chrono", "git2"]}

[lints.clippy]
# Disallow lints from "all" and "pedantic" groups by default
all = {level = "deny", priority = -1}
pedantic = {level = "deny", priority = -1}
# Whitelist some lints from "pedantic" group
similar_names = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
implicit_hasher = "allow"
cast_lossless = "allow"
return_self_not_must_use = "allow"
from_iter_instead_of_collect = "allow"
